발표중 일부 코드 수정